# Yeast

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  todo.txt
doc/: API.txt
editor/: editorwindow.cpp  editorwindow.h  editorwindow.ui  main.cpp
editor/project/: Project.cpp  Project.h
editor/tabs/: basetab.cpp  basetab.h  entityedittab.cpp  entityedittab.h  entityedittab.ui  scriptedittab.cpp  scriptedittab.h  scriptedittab.ui
editor/widgets/: ProjectTree.cpp  ProjectTree.h
engine/: Entity.cpp  Entity.h  Result.h  Settings.cpp  Settings.h  Timer.cpp  Timer.h  World.cpp  World.h  cdefs.h  engine.cpp  engine.h  glad.c  main.cpp  paths.cpp  paths.h  resource.h  resourceloader.cpp  resourceloader.h
engine/blueprints/: EntityBlueprint.cpp  EntityBlueprint.h  LightBlueprint.cpp  LightBlueprint.h  RenderableBackgroundBlueprint.cpp  RenderableBackgroundBlueprint.h  RenderableBlueprint.cpp  RenderableBlueprint.h  RenderableSpriteBlueprint.cpp  RenderableSpriteBlueprint.h  WorldBlueprint.cpp  WorldBlueprint.h
engine/graphics/: .directory  graphicscontext.cpp  graphicscontext.h
engine/graphics/algorithms/: CalculateMaxLum.cpp  CalculateMaxLum.h
engine/graphics/lighting/: AmbientLight.cpp  AmbientLight.h  FullBrightLight.cpp  FullBrightLight.h  PointLight.cpp  PointLight.h  light.cpp  light.h
engine/graphics/primitives/: FrameBuffer.cpp  FrameBuffer.h  color.cpp  color.h  program.cpp  program.h  quad.cpp  quad.h  texture.cpp  texture.h
engine/graphics/renderables/: Background.cpp  Background.h  colorfield.cpp  colorfield.h  renderable.cpp  renderable.h  sprite.cpp  sprite.h
engine/math/: Vector2.cpp  Vector2.h
engine/physics/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h
engine/physics/solvers/: BoxBoxSolver.cpp  BoxBoxSolver.h
engine/premade/entities/: biglogo.cpp  biglogo.h
engine/premade/world/: YeastWorld.cpp  YeastWorld.h
engine/resources/: HotSwappable.cpp  HotSwappable.h  ResourceListener.cpp  ResourceListener.h  ResourceManager.cpp  ResourceManager.h  resource.h  resourceloader.h
engine/scripting/: EngineBindings.cpp  EngineBindings.h  LuaEngine.cpp  LuaEngine.h  LuaIterator.cpp  LuaIterator.h  Script.cpp  Script.h  ScriptInstance.cpp  ScriptInstance.h
engine/scripting/bindings/: entity_lua.cpp  vector2_lua.cpp
engine/simplefilewatcher/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherOSX.cpp  FileWatcherWin32.cpp
engine/windowing/: keys.h  window.cpp  window.h
framework/: main.cpp
game/entities/: Alien.cpp  Alien.h  BoxTest.cpp  BoxTest.h  GenericBackground.cpp  GenericBackground.h  GroundBlock.cpp  GroundBlock.h  PlayerEntity.cpp  PlayerEntity.h  SmallLogo.cpp  SmallLogo.h  bullet.cpp  bullet.h  gunshot.cpp  gunshot.h
game/worlds/: BeginWorld.cpp  BeginWorld.h
include/: json.hpp
include/glad/: glad.h
lib/: libfreetype.a_old
run/res/: settings.ini
run/res/assets/: logo_normal.pdn
run/res/entities/: bullet.json  player.json  wallbackground.json
run/res/entities/enemies/: enemy2.json
run/res/scripts/: bullet.lua  helloscript.lua  mouselook.lua  player.lua
run/res/scripts/classes/: test.lua
run/res/scripts/worlds/: platformworld.lua  testworld.lua
run/res/shaders/: backgroundEffect.fsh  backgroundEffect.vsh  colorEffect.fsh  colorEffect.vsh  spriteEffect.fsh  spriteEffect.vsh  textureEffect.fsh
run/res/shaders/lighting/: ambient.fsh  fullbright.fsh  point.fsh  point.vsh  vertex.vsh
run/res/shaders/post/: clone.fsh  finalize.fsh  post.vsh  tonemap.fsh  tonemap_logavg.fsh  tonemap_max.fsh  tonemap_max.vsh
run/res/worlds/: testworld.json  testworld.lua
src/: engine.rs  gl.rs  main.rs  scene.rs  sprite.rs
src/math/: mod.rs  vec2.rs
